coding the avatar editor

--- a/avatar-editor/app/views/editor.html
+++ b/avatar-editor/app/views/editor.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
-
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="99%" height="99%">
-    <rect ng-click="editor.waka();" x="10" y="10" width="50" height="50" fill="blue"/>
-
-    <g ng-if="editor.display">
-        <text x="0" y="100" fill="white">Look, i'm cool</text>
-        <circle cx="50" cy="50" r="20" stroke="black" stroke-width="3" fill="red"/>
-    </g>
-</svg>
+<avatar-sex-selector></avatar-sex-selector>
+<dress-room ng-if="false" gender="man"></dress-room>
 
 <!-- formulario dentro del SVG -->
 <!--
