male & female dressroom menu buttons done

--- a/avatar-editor/app/views/avatarsexselector.html
+++ b/avatar-editor/app/views/avatarsexselector.html
@@ -9,7 +9,7 @@
             <rect x="0" fill="#9ACDCD" width="960" height="1080"/>
         </g>
 
-        <g id="female" ng-click="sexselector.selectGender('female')" ng-mouseenter="sexselector.mouseenter('female')" ng-mouseleave="sexselector.mouseleave('female')">
+        <g id="female" ng-click="sexselector.selectGender('female')" ng-mouseenter="sexselector.mouseenter('female')" ng-mouseleave="sexselector.mouseleave('female')" class="clickable">
             <g ng-if="!sexselector.female.hover">
                 <g>
                     <g>
@@ -262,11 +262,11 @@
 
         </g>
 
-        <g id="male" ng-click="sexselector.selectGender('male')" ng-mouseenter="sexselector.mouseenter('male')" ng-mouseleave="sexselector.mouseleave('male')">
+        <g id="male" ng-click="sexselector.selectGender('male')" ng-mouseenter="sexselector.mouseenter('male')" ng-mouseleave="sexselector.mouseleave('male')" class="clickable">
             <g ng-if="!sexselector.male.hover">
                 <g>
-                    <polygon fill="#FBCC9A" points="482.2,902.1 416.8,902.1 416.8,891.1 422.4,880.9 482.2,890.8 			"/>
-                    <polygon fill="#FBCC9A" points="531.5,900.3 596.9,903.9 597.5,892.9 592.4,882.5 532.1,889 			"/>
+                    <polygon fill="#FBCC9A" points="482.2,902.1 416.8,902.1 416.8,891.1 422.4,880.9 482.2,890.8"/>
+                    <polygon fill="#FBCC9A" points="531.5,900.3 596.9,903.9 597.5,892.9 592.4,882.5 532.1,889"/>
                     <path
                         fill="#FBCC9A"
                         d="M578.2,537.7c-8.3-8.4-21.7-8.4-29.9,0c-8.2,8.4-8.1,21.8,0,30.1l4.3,4.4c10.6,10.7,21,21.5,31.4,32.4
