--- a/avatar-editor/app/views/main.html
+++ b/avatar-editor/app/views/main.html
@@ -21,6 +21,10 @@
 
     <body>
 
+
+        {{ 'TITLE' | translate }}
+        {{ 'FOO' | translate }}
+
         <section id="one">
             <div class="inner innerS1">
                 <h1>Simple ScrollMagic Tutorial</h1>
