--- a/avatar-editor/app/views/dressroomwoman.html
+++ b/avatar-editor/app/views/dressroomwoman.html
@@ -448,13 +448,13 @@
                 d="M332.6,502.6v315.6c0,6.7-2.1,13.2-5.8,18
             l-36.1,46.5c-7.7,9.9-7.7,26,0,35.9l32.5,41.9c3.7,4.8,5.8,11.2,5.8,18l1.2,1c0,14,8.8,25.4,19.7,25.4h352.3
             c10.9,0,19.7-11.3,19.7-25.3l0-476.9c0-14.1-7.9-21.9-18.8-21.9H353.2C342.3,480.8,332.6,488.5,332.6,502.6z"/>
-            <g id="LLABIS_F_1" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'LLABIS_F_1')">
+            <g id="MOUSTACHE_OR_LIPS_F_1" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'LLABIS_F_1')">
                 <ellipse fill="#CB6566" cx="450.3" cy="573.6" rx="18.4" ry="15.8"/>
             </g>
-            <g id="PIGA_F_2" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'PIGA_F_2')">
+            <g id="MOUSTACHE_OR_LIPS_F_2" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'PIGA_F_2')">
                 <circle fill="#3D3D3B" cx="621.1" cy="569.4" r="12.4"/>
             </g>
-            <g id="LLABIS_F_3" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'LLABIS_F_3')">
+            <g id="MOUSTACHE_OR_LIPS_F_3" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'LLABIS_F_3')">
                 <path
                     fill="#641122"
                     d="M395.1,652.3C395.1,652.3,395.1,652.4,395.1,652.3c-0.2,0.1-0.2,0.2-0.3,0.3c0,0.1-0.1,0.1-0.1,0.2
@@ -462,7 +462,7 @@
                 c19,0,37.3-6.8,54.4-20.3c0,0,0,0,0,0c0,0,0.1-0.1,0.1-0.1c0.1-0.1,0.2-0.2,0.2-0.4c0,0,0,0,0,0c0-0.1,0-0.1,0-0.2
                 c0-0.1,0-0.2,0-0.3c0,0,0,0,0-0.1c0-0.1-0.1-0.1-0.1-0.2c-0.1-0.1-0.1-0.2-0.2-0.3c0,0,0-0.1-0.1-0.1"/>
             </g>
-            <g id="PIRCING_F_4" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'PIRCING_F_4')">
+            <g id="MOUSTACHE_OR_LIPS_F_4" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'PIRCING_F_4')">
                 <g>
                     <path fill="#3D3D3B" d="M604.6,669l-3.9-1.6c0.9-2.3,9.2-22.3,21-22.3c0,0,0.1,0,0.1,0c7.2,0.1,13.4,7.4,18.9,22.4l-4,1.5
                     c-4.7-12.7-9.8-19.5-15-19.6c0,0-0.1,0-0.1,0C614.1,649.3,606.8,663.5,604.6,669z"/>
@@ -470,7 +470,7 @@
                     <ellipse fill="#3D3D3B" stroke="#3D3D3B" stroke-width="0.5" stroke-miterlimit="10" cx="603.4" cy="668.2" rx="4.6" ry="4.8"/>
                 </g>
             </g>
-            <g id="LLABIS_F_5" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'LLABIS_F_5')">
+            <g id="MOUSTACHE_OR_LIPS_F_5" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'LLABIS_F_5')">
                 <path
                     fill="#641122"
                     d="M499.8,766.3C499.8,766.3,499.8,766.2,499.8,766.3c0-0.1,0-0.2,0-0.2c0-0.1,0-0.2,0-0.3c0,0,0,0,0-0.1
@@ -479,7 +479,7 @@
                 c0,0.1,0,0.2,0,0.3c0,0,0,0.1,0,0.2c0,0,0,0,0,0c0,0.2,0.1,0.4,0.3,0.5c0.2,0.2,21.3,18.1,50.1,18.1l0,0
                 c16.9,0,33.2-6.1,48.4-18.1c0,0,0,0,0,0c0,0,0.1-0.1,0.1-0.1C499.7,766.5,499.8,766.4,499.8,766.3z"/>
             </g>
-            <g id="PIGA_F_6" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'PIGA_F_6')">
+            <g id="MOUSTACHE_OR_LIPS_F_6" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'PIGA_F_6')">
                 <g>
                     <circle fill="#B57C36" stroke="#B57C36" stroke-width="0.5" stroke-miterlimit="10" cx="627" cy="733.1" r="2.9"/>
                     <circle fill="#B57C36" stroke="#B57C36" stroke-width="0.5" stroke-miterlimit="10" cx="634.6" cy="752.8" r="2.9"/>
@@ -496,13 +496,13 @@
                     <circle fill="#B57C36" stroke="#B57C36" stroke-width="0.5" stroke-miterlimit="10" cx="624.1" cy="782.5" r="2.9"/>
                 </g>
             </g>
-            <g id="MOFLETES_F_7" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'MOFLETES_F_7')">
+            <g id="MOUSTACHE_OR_LIPS_F_7" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'MOFLETES_F_7')">
                 <g>
                     <ellipse fill="#F29799" cx="488.2" cy="910.6" rx="26" ry="22.3"/>
                     <ellipse fill="#F29799" cx="416.3" cy="910.6" rx="26" ry="22.3"/>
                 </g>
             </g>
-            <g id="NADA_F_8" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'NADA_F_8')">
+            <g id="MOUSTACHE_OR_LIPS_F_NOTHING" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'NADA_F_8')">
                 <g>
                     <g>
                         <path fill="none" stroke="#837F80" stroke-width="11" stroke-miterlimit="10" d="M619.7,861.9c-24.1,0-43.6,19.5-43.6,43.6
@@ -575,7 +575,7 @@
                     </g>
                 </g>
             </g>
-            <g id="ULLERES_F_4_1_" class="clickable" ng-click="dressroom.setAttribute('glasses', 'ULLERES_F_4_1_')">
+            <g id="ULLERES_F_4" class="clickable" ng-click="dressroom.setAttribute('glasses', 'ULLERES_F_4_1_')">
                 <g>
                     <path fill="none" stroke="#9A6633" stroke-width="4" stroke-miterlimit="10" d="M599.6,440.5H560c-3.1,0-5.7-2.5-5.7-5.7v-6.2
                     c0-3.1,2.5-5.7,5.7-5.7h39.6c3.1,0,5.7,2.5,5.7,5.7v6.2C605.3,438,602.7,440.5,599.6,440.5z"/>
@@ -586,7 +586,7 @@
                     <line fill="none" stroke="#9A6633" stroke-width="4" stroke-miterlimit="10" x1="554.3" y1="431.7" x2="546.9" y2="431.7"/>
                 </g>
             </g>
-            <g id="ULLERES_F_5_1_" class="clickable" ng-click="dressroom.setAttribute('glasses', 'ULLERES_F_5_1_')">
+            <g id="ULLERES_F_5" class="clickable" ng-click="dressroom.setAttribute('glasses', 'ULLERES_F_5_1_')">
                 <g>
                     <path
                         fill="#3D3F91"
@@ -611,7 +611,7 @@
                     c0.8,0.4,1.4,1,1.8,1.8c0.4,0.9,0.9,1.8,1.2,2.7c0.4,1.1,0.5,2.3,0.5,3.4C492.9,549,493,550.9,492.9,552.7 M497.3,539.8"/>
                 </g>
             </g>
-            <g id="ULLERES_F_6_1_" class="clickable" ng-click="dressroom.setAttribute('glasses', 'ULLERES_F_6_1_')">
+            <g id="ULLERES_F_6" class="clickable" ng-click="dressroom.setAttribute('glasses', 'ULLERES_F_6_1_')">
                 <path
                     id="gafas_2_1_"
                     fill="#669999"
@@ -625,7 +625,7 @@
                 c-8.2,6.5-26,2.2-30.7-0.3c-4.7-2.5-7.1-8.8-9.6-17.2c-2.9-10.6-0.5-14.3,1.6-17.2c2.1-2.9,11.1-4.7,21.5-4.7
                 c9.1,0,20.5,4.1,20.5,4.1C672.6,540.8,671.6,546.2,670.8,556.5z"/>
             </g>
-            <g id="ULLERES_F_7_1_" class="clickable" ng-click="dressroom.setAttribute('glasses', 'ULLERES_F_7_1_')">
+            <g id="ULLERES_F_7" class="clickable" ng-click="dressroom.setAttribute('glasses', 'ULLERES_F_7_1_')">
                 <path
                     fill="#65140F"
                     d="M496.1,661.1c0-0.4-0.2-0.7-0.6-0.8c-0.3-0.1-0.5-0.2-0.8-0.2c-4-0.7-7.9-1.3-11.9-1.6
@@ -642,7 +642,7 @@
                 C496.3,663,496.2,662.1,496.1,661.1 M374.3,665.3 M393.6,662.2 M486.6,672.4c0.1,1.8,0.1,3.6,0.1,5.3 M483.3,664.7 M461,661.9
                 c2-0.1,4-0.2,5.3-0.3 M446.8,664.9 M486.7,677.7 M490.9,665.3"/>
             </g>
-            <g id="ULLERES_F_8_1_" class="clickable" ng-click="dressroom.setAttribute('glasses', 'ULLERES_F_8_1_')">
+            <g id="ULLERES_F_8" class="clickable" ng-click="dressroom.setAttribute('glasses', 'ULLERES_F_8_1_')">
                 <path
                     fill="#3D3D3B"
                     d="M669.2,673.1c-0.4-0.6-1.1-0.4-1.5-1.8c-0.4-1.4-3.7-10.6-7.5-12.7c-3.7-2.1-10.9-5.7-28.3-6.9
@@ -685,7 +685,7 @@
                 c-11-2.5-13.9-6.8-18.3-11.7c-4.4-4.9-8.2-15.1-9.3-20.1c-1.1-5-1-14,0-16.6c1-2.7,4.9-4.6,16.8-5.4c11.9-0.8,22.8,1.1,29.6,4.1
                 c6.8,2.9,9.4,12,9.4,12s0.5,2.9,0.5,10.9C503.1,824.8,498.8,833.3,494.4,838.6z"/>
             </g>
-            <g id="ULLERES_F_10" class="clickable" ng-click="dressroom.setAttribute('glasses', 'ULLERES_F_10')">
+            <g id="ULLERES_F_NOTHING" class="clickable" ng-click="dressroom.setAttribute('glasses', 'ULLERES_F_10')">
                 <g>
                     <g>
                         <path fill="none" stroke="#837F80" stroke-width="11" stroke-miterlimit="10" d="M613.4,771.8c-21.3,0-38.6,17.3-38.6,38.6
@@ -807,7 +807,7 @@
     				c6.3-3.2,17.7,0.6,12.9,7.6c4.1,0.3,8.5,2.8,5.9,6.6"/>
     			</g>
     		</g>
-    		<g id="CABELL_F_10" class="clickable" ng-click="dressroom.setAttribute('hair', 'CABELL_F_10')">
+    		<g id="CABELL_F_NOTHING" class="clickable" ng-click="dressroom.setAttribute('hair', 'CABELL_F_10')">
     			<g>
     				<path fill="none" stroke="#837F80" stroke-width="11" stroke-miterlimit="10" d="M602.6,796.6c-19.2,0-34.7,15.5-34.7,34.7
     				c0,19.2,15.5,34.7,34.7,34.7c19.2,0,34.7-15.5,34.7-34.7C637.3,812.1,621.8,796.6,602.6,796.6z"/>
