--- a/avatar-editor/app/views/dressroomman.html
+++ b/avatar-editor/app/views/dressroomman.html
@@ -215,7 +215,7 @@
                 c3.8,0,7.1,3,7.4,6.8l5.8,45.9L1500.4,547.3z"/>
             </g>
             <g id="PANTALO_M_5" class="clickable" ng-click="dressroom.setAttribute('bottomClothe', 'PANTALO_M_5')">
-                <path id="k" fill="#5F64AA" d="M1320.4,750.6l-7.2-106.5h-87.7l-6.1,106.5l35.7,5.8l5.4-86.3c0.2-3.6,3.3-6.5,6.9-6.5h5
+                <path fill="#5F64AA" d="M1320.4,750.6l-7.2-106.5h-87.7l-6.1,106.5l35.7,5.8l5.4-86.3c0.2-3.6,3.3-6.5,6.9-6.5h5
                 c3.6,0,6.7,2.9,6.9,6.5l5.5,86.3L1320.4,750.6z"/>
             </g>
             <g id="PANTALO_M_6" class="clickable" ng-click="dressroom.setAttribute('bottomClothe', 'PANTALO_M_6')">
@@ -589,7 +589,7 @@
     				c0,0,8.8-0.9,10-5.3C415.2,697.6,430.3,708.5,435.5,694.9z"/>
                 </g>
             </g>
-            <g id="CABELL_M_10" class="clickable" ng-click="dressroom.setAttribute('hair', 'CABELL_M_10')">
+            <g id="CABELL_M_NOTHING" class="clickable" ng-click="dressroom.setAttribute('hair', 'CABELL_M_NOTHING')">
                 <g>
                     <g>
                         <path fill="none" stroke="#837F80" stroke-width="11" stroke-miterlimit="10" d="M609.5,686.6c-24.1,0-43.6,19.5-43.6,43.6
@@ -805,7 +805,7 @@
     			c-11-2.5-13.9-6.8-18.3-11.7c-4.4-4.9-8.2-15.1-9.3-20.1c-1.1-5-1-14,0-16.6c1-2.7,4.9-4.6,16.8-5.4c11.9-0.8,22.8,1.1,29.6,4.1
     			c6.8,2.9,9.4,12,9.4,12s0.5,2.9,0.5,10.9C503.1,824.8,498.8,833.3,494.4,838.6z"/>
             </g>
-            <g id="ULLERES_M_10" class="clickable" ng-click="dressroom.setAttribute('glasses', 'ULLERES_M_10')">
+            <g id="ULLERES_M_NOTHING" class="clickable" ng-click="dressroom.setAttribute('glasses', 'ULLERES_M_NOTHING')">
                 <g>
                     <g>
                         <path fill="none" stroke="#837F80" stroke-width="11" stroke-miterlimit="10" d="M613.4,771.8c-21.3,0-38.6,17.3-38.6,38.6
@@ -856,7 +856,7 @@
                 d="M335.8,436.2v382c0,6.7-2.1,13.2-5.8,18
     		l-36.1,46.5c-7.7,9.9-7.7,26,0,35.9l32.5,41.9c3.7,4.8,5.8,11.2,5.8,18l1.2,31c0,14,8.8,25.4,19.7,25.4h349
     		c10.9,0,19.7-11.3,19.7-25.3V436.3c0-14.1-7.9-21.9-18.8-21.9H356.5C345.6,414.4,335.8,422.2,335.8,436.2z"/>
-            <g id="BARBA_M_1" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'BARBA_M_1')">
+            <g id="MOUSTACHE_OR_LIPS_M_1" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'MOUSTACHE_OR_LIPS_M_1')">
                 <g>
                     <path
                         fill="#F39669"
@@ -871,7 +871,7 @@
                     </g>
                 </g>
             </g>
-            <g id="BARBA_M_2" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'BARBA_M_2')">
+            <g id="MOUSTACHE_OR_LIPS_M_2" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'MOUSTACHE_OR_LIPS_M_2')">
                 <path
                     fill="#2D0E0F"
                     d="M663.5,459.5c-3.9,5.3-8.1,11-11.6,16.6c-1.7,2.6-3.1,5.2-4.5,7.9c-0.5,0.9-1.3,2.6-2.4,2.9
@@ -883,7 +883,7 @@
     			c0,0-11.4,7.1-14.8,2c-0.2-0.4,0.1-1.5-0.2-2c-0.9-1.7-4-1.1-5.3-1c-1.5,0.2-2.8-0.8-3.8,0.9c-0.3,0.6,0,1.7-0.2,2.1
     			c-3.4,5.1-14.8-2-14.8-2c-19.6-15.2,13.6-14.2,18.8-13.9C615.6,485.1,650.2,484.1,630.6,499.3z"/>
             </g>
-            <g id="BARBA_M_3" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'BARBA_M_3')">
+            <g id="MOUSTACHE_OR_LIPS_M_3" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'MOUSTACHE_OR_LIPS_M_3')">
                 <g>
                     <g>
                         <path
@@ -894,17 +894,17 @@
                     </g>
                 </g>
             </g>
-            <g id="BARBA_M_4" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'BARBA_M_4')">
+            <g id="MOUSTACHE_OR_LIPS_M_4" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'MOUSTACHE_OR_LIPS_M_4')">
                 <path id="barba" fill="#8A6353" stroke="#8A6353" stroke-miterlimit="10" d="M609.4,632.8c2.7-0.2,13.3,2.4,13.3,2.4
     			c43.9,6.5,38.6-40.9,38.6-40.9s28,55.9-51.3,69h0.2c-77.9-4-51.5-69-51.5-69s-5.6,47.4,38.2,40.9c0,0,10.6-2.6,13.3-2.4"/>
             </g>
-            <g id="BARBA_M_5" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'BARBA_M_5')">
+            <g id="MOUSTACHE_OR_LIPS_M_5" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'MOUSTACHE_OR_LIPS_M_5')">
                 <path fill="#2B1012" d="M445.6,771.4c-0.6-0.2-2.1-0.1-2.7-0.1c-0.9,0-0.9,5.2-3.5,6.6c-6.7,3.6-21,2.9-27.5-5
     			c-0.4,0-8.6-23.5-9.4-25l-13.2-4.6c-0.7,16.1-0.5,26.2,15.6,42.9c7.6,7.9,21.4,11.3,24.2,12.1c7.7,2.3,12.4,1.8,15.7,0.7"/>
                 <path fill="#2B1012" d="M444.5,771.4c0.6-0.2,2.1-0.1,2.7-0.1c0.9,0,0.9,5.2,3.6,6.6c6.7,3.6,21,2.9,27.5-5
     			c0.4,0,9.2-24.1,10-25.6l13.1-3.9c-0.8,14.7,3,22.3-16.1,42.9c-7.5,8.1-21.4,11.3-24.2,12.1c-7.7,2.3-12.8,1.8-16.1,0.7"/>
             </g>
-            <g id="BARBA_M_6" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'BARBA_M_6')">
+            <g id="MOUSTACHE_OR_LIPS_M_6" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'MOUSTACHE_OR_LIPS_M_6')">
                 <path
                     id="barba_1_"
                     fill="#512A14"
@@ -914,7 +914,7 @@
     			c0-2.8,0.1-5.6,0.3-8.3c0.2-2.4,0.4-4.7,0.7-7.1c0.2-1.8,0.5-3.6,0.8-5.4c0.2-1.1,0.4-2.1,0.6-3.2c0-0.2,0.1-0.4,0.1-0.6l5.4,5.6
     			c0,0-2,35.5,18.4,25.9l2.4-6.9c0,0,1.5-1.7,6.3-1.3"/>
             </g>
-            <g id="PIGA_M_7" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'BARBA_M_7')">
+            <g id="MOUSTACHE_OR_LIPS_M_7" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'MOUSTACHE_OR_LIPS_M_7')">
                 <g>
                     <circle fill="#B57C36" stroke="#B57C36" stroke-width="0.5" stroke-miterlimit="10" cx="446.8" cy="917.8" r="2.9"/>
                     <circle fill="#B57C36" stroke="#B57C36" stroke-width="0.5" stroke-miterlimit="10" cx="454.4" cy="937.6" r="2.9"/>
@@ -931,7 +931,7 @@
                     <circle fill="#B57C36" stroke="#B57C36" stroke-width="0.5" stroke-miterlimit="10" cx="443.8" cy="967.3" r="2.9"/>
                 </g>
             </g>
-            <g id="NADA_M_8" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'BARBA_M_8')">
+            <g id="MOUSTACHE_OR_LIPS_M_NOTHING" class="clickable" ng-click="dressroom.setAttribute('moustacheOrLips', 'MOUSTACHE_OR_LIPS_M_NOTHING')">
                 <g>
                     <g>
                         <path fill="none" stroke="#837F80" stroke-width="11" stroke-miterlimit="10" d="M609.3,891.1c-24.1,0-43.6,19.5-43.6,43.6
