--- a/avatar-editor/app/views/dressroomman.html
+++ b/avatar-editor/app/views/dressroomman.html
@@ -434,7 +434,7 @@
             <g id="CAP_M_1" class="clickable" ng-click="dressroom.setAttribute('skinColor', 'CAP_M_1')">
                 <g>
                     <path
-                        fill="#F2E8D4"
+                        fill="#FBCC9A"
                         d="M498.2,184.1c-0.3,0-0.5,0-0.8,0c-1.4,20-16.3,36.2-35.6,39.3l0.6,4.6c0.3,0,0.5,0.1,0.8,0.1
     				c0.4,0.1,0.8,0.1,1.3,0.2c0.3,0.1,0.7,0.1,1,0.2c0.5,0.1,0.9,0.1,1.4,0.2c0.2,0,0.4,0.1,0.6,0.1l0,0c2.8,0.5,5.3,1,7.5,1.5
     				c4.4,1,7.9,5.8,7.9,10.3h-73.7c0-4.6,3.5-9.3,7.9-10.3c2.2-0.5,4.7-1,7.5-1.5l0,0c0,0,0,0,0,0c0.7-0.1,1.4-0.2,2.1-0.3
