added resolve functions to some routes

--- a/avatar-editor/app/views/dressroomwoman.html
+++ b/avatar-editor/app/views/dressroomwoman.html
@@ -1017,7 +1017,7 @@
     		C1087.3,992.7,1075.2,1004.8,1060.3,1004.8z"/>
         </g>
 
-        <g id="validation-button" class="clickable">
+        <g id="validation-button" class="clickable" ng-click="dressroom.editionFinished()">
             <g>
                 <g>
                     <g>
