--- a/avatar-editor/app/views/avatarquestionman.html
+++ b/avatar-editor/app/views/avatarquestionman.html
@@ -12,7 +12,7 @@
     	</g>
 
     	<g id="AVATAR_RANDOM">
-    		<g id="SANT_MARTI">
+    		<g id="SANT_MARTI" ng-if="question.display[0]">
     			<g>
     				<path fill="#FBCC9A" d="M1057.1,880.5l-12.8-188.7H888.9l-10.8,188.7l63.2,10.3l9.6-152.9c0.4-6.3,5.9-11.5,12.2-11.5h8.8
     				c6.3,0,11.8,5.1,12.2,11.5l9.8,152.9L1057.1,880.5z"/>
@@ -91,7 +91,7 @@
     				<polygon fill="#531E53" points="993.6,901.8 1062.2,902.9 1062.8,891.4 1057.5,880.5 993.8,887.3 			"/>
     			</g>
     		</g>
-    		<g id="SERRIA_SANT_GERV">
+    		<g id="SERRIA_SANT_GERV" ng-if="question.display[1]">
     			<g>
     				<path
     					fill="#FBCC9A"
@@ -173,7 +173,7 @@
     				C1036.4,693.5,1037.7,697.4,1040.9,699.9z"/>
     			</g>
     		</g>
-    		<g id="CIUTAT_VELLA">
+    		<g id="CIUTAT_VELLA" ng-if="question.display[2]">
     			<path id="pantalones_2_1_" fill="#5F64AA" d="M1055.1,881.2l-12.9-189.4h-156l-10.8,189.4l63.4,10.3l9.6-153.5
     			c0.4-6.4,5.9-11.5,12.3-11.5h8.8c6.4,0,11.9,5.2,12.3,11.5l9.8,153.5L1055.1,881.2z"/>
     			<g>
@@ -263,7 +263,7 @@
     				986.2,645.6 966,630.9 945.7,645.6 953.5,621.8 933.2,607.1 958.2,607.1 			"/>
     			</g>
     		</g>
-    		<g id="SANTS_MONTJUIC">
+    		<g id="SANTS_MONTJUIC" ng-if="question.display[3]">
     			<g>
     				<path fill="#FEDA97" d="M1014.1,512c-13-2.3-28.7-4.4-44.8-4.4c-16.2,0-31.9,1.9-45,4.2l42.2,12.1c0.6,0.8,1.6,1.3,2.7,1.3l0,0
     				c1,0,2-0.5,2.7-1.3L1014.1,512z"/>
@@ -372,7 +372,7 @@
     				<circle fill="#B57B35" stroke="#B57B35" stroke-width="0.5" stroke-miterlimit="10" cx="1013.3" cy="447.1" r="1.6"/>
     			</g>
     		</g>
-    		<g id="LES_CORTS">
+    		<g id="LES_CORTS" ng-if="question.display[4]">
     			<g>
     				<path id="pantalones_2_2_" fill="#5F63AA" d="M1058.7,885.5l-12.9-190.2H889.2l-10.8,190.2l63.7,10.4l9.7-154.2
     				c0.4-6.4,5.9-11.6,12.3-11.6h8.9c6.4,0,11.9,5.2,12.3,11.6l9.9,154.2L1058.7,885.5z"/>
@@ -453,7 +453,7 @@
     				</g>
     			</g>
     		</g>
-    		<g id="GRACIA">
+    		<g id="GRACIA" ng-if="question.display[5]">
     			<g>
     				<path fill="#7F5D37" d="M1060.7,889.5l-13.3-192.6H885.7l-11.2,192.6l65.7,10.5l10.1-60.4c0.4-6.5,6.1-11.7,12.7-11.7h9.2
     				c6.6,0,12.3,5.2,12.7,11.7L995,900L1060.7,889.5z"/>
@@ -774,7 +774,7 @@
     				c0.1,3.1,0.3,6.1,0.2,9.2 M1050.7,367.1 M1012.2,362.2c3.4-0.2,6.9-0.3,9.2-0.4 M987.7,367.4 M1056.6,389.5 M1063.9,368"/>
     			</g>
     		</g>
-    		<g id="HORTA_GUINARDO">
+    		<g id="HORTA_GUINARDO" ng-if="question.display[6]">
     			<g>
     				<path fill="#CCCC99" d="M1061.2,892.1l-14.9-194.9H888l-12.5,195.2l65.4,10.5l10.3-152c0.4-6.5,6-11.7,12.6-11.7h9.1
     				c6.5,0,12.2,5.2,12.6,11.7l10.2,151.8L1061.2,892.1z"/>
@@ -874,7 +874,7 @@
     				l6.4,6.6c0,0-2.4,42,21.8,30.6l2.9-8.2c0,0,1.7-2,7.5-1.6"/>
     			</g>
     		</g>
-    		<g id="SANT_ANDREU">
+    		<g id="SANT_ANDREU" ng-if="question.display[7]">
     			<g>
     				<path fill="#ACCCCE" d="M882.8,692.6"/>
     				<g>
@@ -996,7 +996,7 @@
     				C845.7,252.2,995,276.1,1084.1,252.2z"/>
     			</g>
     		</g>
-    		<g id="EIXAMPLE">
+    		<g id="EIXAMPLE" ng-if="question.display[8]">
     			<g>
     				<path fill="#3C3C3B" d="M1057.9,879.7l-13.2-190H888.9l-10.8,190.5l62.4,9.2l10.9-153.3c0.4-6.4,5.9-11.6,12.3-11.6h8.9
     				c6.4,0,11.9,5.2,12.3,11.6l8.8,153.3L1057.9,879.7z"/>
@@ -1089,8 +1089,8 @@
     				</g>
     			</g>
     		</g>
-            
-    		<g id="NOU_BARRIS">
+
+    		<g id="NOU_BARRIS" ng-if="question.display[9]">
     			<g>
     				<polygon fill="#FBCC9A" points="944,900.8 875.1,900.8 875.1,889.3 881.1,878.7 944,889 			"/>
     				<polyline fill="#644F2F" points="944,894.9 944,900.8 875.1,900.8 875.1,895.1 			"/>
