avatarName input done, still ramins translate it to the correct point

--- a/avatar-editor/app/views/dressroomman.html
+++ b/avatar-editor/app/views/dressroomman.html
@@ -25,6 +25,15 @@
         <g id="NOM">
             <path fill="#F39669" d="M1060.3,1004.8H863.9c-14.9,0-27-12.1-27-27l0,0c0-14.9,12.1-27,27-27h196.4c14.9,0,27,12.1,27,27l0,0
     		C1087.3,992.7,1075.2,1004.8,1060.3,1004.8z"/>
+
+            <foreignobject x="860" y="960" width="200" height="150">
+                <body xmlns="http://www.w3.org/1999/xhtml">
+                    <form>
+                        <input type="text" ng-model="dressroom.avatarName"/>
+                    </form>
+                </body>
+            </foreignobject>
+
         </g>
 
         <g id="validation-button" class="clickable" ng-click="dressroom.editionFinished()">
