share almost done

--- a/avatar-editor/app/views/sharemaleavatar.html
+++ b/avatar-editor/app/views/sharemaleavatar.html
@@ -3,7 +3,10 @@
 <div style="width: 100%; height: 100%; display: flex; flex-direction: row; align-items: center; justify-content: center;">
 
     <svg style="height: 99%; width: auto;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 1920.1 1081" enable-background="new 0 0 1920.1 1081" xml:space="preserve">
-    	<g id="FONS">
+
+<image xlink:href="{{share.avatarURI}}" x="0" y="0" height="50px" width="50px"/>
+
+        <g id="FONS">
     		<rect x="0" y="585.5" fill="#F39669" width="1920.1" height="495"/>
     		<path fill="#9ACDCD" d="M947,693.4c360.8,0,695.7,37.9,973.9,102.8V-0.4H0v790.6C272.7,729,597.8,693.4,947,693.4z"/>
     		<path opacity="0.6" fill="#E5E6E5" d="M1377.1,984.1l-320-984.8H871.6l-320,984.8c-2.4,3.7-3.7,7.7-3.7,11.6
