--- a/avatar-editor/app/views/editor.html
+++ b/avatar-editor/app/views/editor.html
@@ -1,34 +1,20 @@
 <!DOCTYPE html>
+
 <avatar-sex-selector ng-if="!editor.dressroom" renderdressroom="editor.dressroom"></avatar-sex-selector>
 <dress-room ng-if="editor.dressroom"></dress-room>
 
-<!-- formulario dentro del SVG -->
-<!--
-<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
-    <rect x="25" y="25" width="250" height="200" fill="#ff0000" stroke="#000000"/>
-    <foreignObject x="50" y="50" width="200" height="150">
-        <body xmlns="http://www.w3.org/1999/xhtml">
-            <form>
-                <input type="text"/>
-                <input type="text"/>
-            </form>
-        </body>
-    </foreignObject>
-    <circle cx="60" cy="80" r="30" fill="#00ff00" fill-opacity="0.5"/>
-</svg>
--->
 
 <!-- export SVG to JPEG -->
 <!--
 <button>svg to png</button>
 
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="200" height="200">
+<svg style="display: none;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="200" height="200">
     <rect x="10" y="10" width="50" height="50" fill="blue"/>
     <text x="0" y="100" fill="white">Look, i'm cool</text>
     <circle cx="50" cy="50" r="20" stroke="black" stroke-width="3" fill="red" />
 </svg>
 
-<canvas id="canvas"></canvas>
+<canvas id="canvas" style="display: none;"></canvas>
 
 <script>
 
@@ -68,10 +54,8 @@
 
             //var imgURI = canvas.toDataURL('image/png').replace('image/png', 'image/octet-stream');
             var imgURI = canvas.toDataURL('image/jpeg', 1.0).replace('image/jpeg', 'image/octet-stream');
-
             triggerDownload(imgURI);
         };
-
         img.src = url;
     });
 </script>
