share template correctly composed (importing the created image for downloading into template's svg)

--- a/avatar-editor/app/views/editor.html
+++ b/avatar-editor/app/views/editor.html
@@ -3,6 +3,12 @@
 <avatar-sex-selector ng-if="!editor.dressroom" renderdressroom="editor.dressroom"></avatar-sex-selector>
 <dress-room ng-if="editor.dressroom"></dress-room>
 
+<!--
+<svg style="height: 99%; width: auto;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 1920.1 1081" enable-background="new 0 0 1920.1 1081" xml:space="preserve">
+
+    <image xlink:href="http://i2.cdnds.net/13/48/300x225/ustv-family-guy-brian.jpg" x="0" y="0" height="100" width="100"/>
+</svg>
+-->
 
 <!-- export SVG to JPEG -->
 <!--
