--- a/avatar-editor/app/views/share.html
+++ b/avatar-editor/app/views/share.html
@@ -1,2 +1,3 @@
 <!DOCTYPE html>
-<share-avatar></share-avatar>
+<svg-to-jpeg style="display: none;" imgurl="share.imgUrl"></svg-to-jpeg>
+<share-avatar imgurl="share.imgUrl"></share-avatar>
