--- a/avatar-editor/app/views/sharefemaleavatar.html
+++ b/avatar-editor/app/views/sharefemaleavatar.html
@@ -106,7 +106,9 @@
                 <line fill="none" stroke="#878787" stroke-width="11" stroke-linecap="round" stroke-miterlimit="10" x1="1365.9" y1="420" x2="1507.9" y2="420"/>
             </g>
         </g>
-        <g id="PREGUNTA_CAT"></g>
+
+        <image xlink:href="" ng-href="{{imgurl}}" x="600" y="200" height="400" width="400"/>
+
     </svg>
 
 </div>
