still trying to process image on server

--- a/avatar-editor/app/views/sharemaleavatar.html
+++ b/avatar-editor/app/views/sharemaleavatar.html
@@ -2,6 +2,23 @@
 
 <div style="width: 100%; height: 100%; display: flex; flex-direction: row; align-items: center; justify-content: center;">
 
+    <a id="shareTwitterLink"
+    href=""
+    socialshare
+    socialshare-provider="twitter"
+    socialshare-text="This is my DistricteZero avatar!"
+    socialshare-hashtags="districteZero"
+    socialshare-url="http://static.t13.cl/images/sizes/1200x675/mgr_630_brian_griffin.jpg"></a>
+
+    <a id="shareFacebookLink"
+    href=""
+    socialshare
+    socialshare-provider="facebook"
+    socialshare-url="http://static.t13.cl/images/sizes/1200x675/mgr_630_brian_griffin.jpg">
+    </a>
+
+
+
     <svg style="height: 99%; width: auto;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 1920.1 1081" enable-background="new 0 0 1920.1 1081" xml:space="preserve">
 
         <g id="FONS">
@@ -18,46 +35,52 @@
         </g>
         <g id="REDES_SOCIALES">
             <g>
-                <path
-                    fill="#FFFFFF"
-                    d="M785.4,963.2c0-7.6,0-15.1,0-22.7v-13.9V926h-7.5c0-0.3,0-0.5,0-0.7c0-3.7,0-7.5,0-11.2
+                <g ng-click="shareavatar.shareFacebook()" class="clickable">
+                    <path
+                        fill="#FFFFFF"
+                        d="M785.4,963.2c0-7.6,0-15.1,0-22.7v-13.9V926h-7.5c0-0.3,0-0.5,0-0.7c0-3.7,0-7.5,0-11.2
     			c0-0.5,0.2-0.7,0.7-0.7c2.1,0,4.1,0,6.2,0h0.7v-0.8c0-3.5,0-6.9,0-10.4c0-2.2,0.5-4.4,1.5-6.4c1.5-3,3.9-4.9,7-6
     			c1.6-0.5,3.2-0.7,4.8-1.1c0.2,0,0.4-0.1,0.6-0.1h13.6v12c0,1.1,0,1.1-1.2,1.1c-2.4,0-4.8,0-7.2,0c-1.5,0-2.9,1-3.4,2.4
     			c-0.1,0.3-0.1,0.5-0.1,0.8c0,2.6,0,5.2,0,7.7c0,0.5,0.2,0.6,0.7,0.6c3.5,0,6.9,0,10.4,0h0.8c0,0.4,0,0.7-0.1,1
     			c-0.4,3.7-0.9,7.4-1.3,11c0,0.5-0.2,0.5-0.7,0.5c-3,0-6.1,0-9.1,0H801c0,0.2,0,0.4,0,0.6c0,12,0,24.1,0,36.1c0,0.2,0,0.4,0,0.5
     			H785.4z"/>
-                <path
-                    fill="#FFFFFF"
-                    d="M920.8,951.3c7.7,0.7,14.6-1.2,20.9-5.9c-6.6-0.6-11-3.8-13.4-9.9c2.2,0.3,4.2,0.3,6.3-0.2
+                </g>
+                <g ng-click="shareavatar.shareTwitter()" class="clickable">
+                    <path
+                        fill="#FFFFFF"
+                        d="M920.8,951.3c7.7,0.7,14.6-1.2,20.9-5.9c-6.6-0.6-11-3.8-13.4-9.9c2.2,0.3,4.2,0.3,6.3-0.2
     			c-7.1-2.1-10.9-6.8-11.3-14.1c2,0.9,4,1.6,6.4,1.6c-3.1-2.2-5.1-5.1-5.9-8.7c-0.8-3.6-0.3-7,1.5-10.3c7.8,9.1,17.6,14.1,29.6,14.9
     			c-0.1-0.9-0.2-1.7-0.3-2.6c-0.2-4.4,1.3-8.2,4.6-11.2c3.6-3.3,7.9-4.4,12.7-3.5c2.8,0.5,5.2,1.8,7.1,3.8c0.3,0.3,0.6,0.4,1,0.3
     			c2.7-0.6,5.3-1.5,7.7-2.9c0.2-0.1,0.4-0.2,0.7-0.3c0,0,0.1,0,0.2,0c-1.1,3.2-3.1,5.7-5.9,7.6c2.7-0.2,5.2-1,7.8-2.1
     			c-1.3,2-2.8,3.6-4.4,5.1c-0.7,0.6-1.4,1.2-2.2,1.8c-0.4,0.3-0.5,0.6-0.5,1.1c0.2,4.1-0.4,8.1-1.5,12c-0.9,3.4-2.3,6.6-4,9.6
     			c-1.9,3.3-4.2,6.3-6.9,8.9c-3.7,3.6-7.9,6.4-12.7,8.3c-4.5,1.8-9.2,2.7-14.1,2.9c-3.4,0.1-6.8-0.1-10.1-0.8
     			c-3.4-0.7-6.6-1.8-9.7-3.4c-1.3-0.7-2.5-1.3-3.8-2C920.7,951.4,920.7,951.4,920.8,951.3"/>
-                <path
-                    fill="#FFFFFF"
-                    d="M1176.8,1014.1H743.3c-22.8,0-41.4-18.6-41.4-41.4v-92.8c0-22.8,18.6-41.4,41.4-41.4h433.6
-    			c22.8,0,41.4,18.6,41.4,41.4v92.8C1218.2,995.5,1199.7,1014.1,1176.8,1014.1z M743.3,851.5c-15.6,0-28.3,12.7-28.3,28.3v92.8
-    			c0,15.6,12.7,28.3,28.3,28.3h433.6c15.6,0,28.3-12.7,28.3-28.3v-92.8c0-15.6-12.7-28.3-28.3-28.3H743.3z"/>
-                <path fill="#FFFFFF" d="M870.4,954.2c-3.6,0-6.6-3-6.6-6.6v-36.5c0-3.6,3-6.6,6.6-6.6c3.6,0,6.6,3,6.6,6.6v36.5
-    			C877.1,951.3,874.1,954.2,870.4,954.2z"/>
-                <path fill="#FFFFFF" d="M1031.4,954.2c-3.6,0-6.6-3-6.6-6.6v-36.5c0-3.6,3-6.6,6.6-6.6c3.6,0,6.6,3,6.6,6.6v36.5
-    			C1038,951.3,1035,954.2,1031.4,954.2z"/>
+                </g>
                 <g>
                     <path
                         fill="#FFFFFF"
-                        d="M1134.9,891.1c-6.1-0.3-12.2-0.1-18.2-0.1c-6.2,0-12.3-0.2-18.5,0c-10,0.4-15.8,5.7-16.3,15.6
+                        d="M1176.8,1014.1H743.3c-22.8,0-41.4-18.6-41.4-41.4v-92.8c0-22.8,18.6-41.4,41.4-41.4h433.6
+    			c22.8,0,41.4,18.6,41.4,41.4v92.8C1218.2,995.5,1199.7,1014.1,1176.8,1014.1z M743.3,851.5c-15.6,0-28.3,12.7-28.3,28.3v92.8
+    			c0,15.6,12.7,28.3,28.3,28.3h433.6c15.6,0,28.3-12.7,28.3-28.3v-92.8c0-15.6-12.7-28.3-28.3-28.3H743.3z"/>
+                    <path fill="#FFFFFF" d="M870.4,954.2c-3.6,0-6.6-3-6.6-6.6v-36.5c0-3.6,3-6.6,6.6-6.6c3.6,0,6.6,3,6.6,6.6v36.5
+    			C877.1,951.3,874.1,954.2,870.4,954.2z"/>
+                    <path fill="#FFFFFF" d="M1031.4,954.2c-3.6,0-6.6-3-6.6-6.6v-36.5c0-3.6,3-6.6,6.6-6.6c3.6,0,6.6,3,6.6,6.6v36.5
+    			C1038,951.3,1035,954.2,1031.4,954.2z"/>
+                    <g>
+                        <path
+                            fill="#FFFFFF"
+                            d="M1134.9,891.1c-6.1-0.3-12.2-0.1-18.2-0.1c-6.2,0-12.3-0.2-18.5,0c-10,0.4-15.8,5.7-16.3,15.6
     				c-0.5,12.2-0.4,24.5-0.2,36.7c0,3.1,0.8,6.4,2.2,9.2c2.8,5.9,8.4,7.8,14.4,8c9.4,0.2,18.9,0.3,28.3,0.2c3.7,0,7.5-0.1,11.2-0.6
     				c7.7-1.2,12.7-5.8,13-13.6c0.6-13.4,0.8-26.9,0.2-40.3C1150.6,896.5,1144.7,891.5,1134.9,891.1z M1116.5,947.8
     				c-12.1,0-22-9.8-22-21.9c-0.1-12.2,9.8-22.1,22.1-22.1c12.1,0,22,9.8,22,21.9C1138.6,937.9,1128.7,947.8,1116.5,947.8z
     				 M1139.5,908c-2.9,0.1-5.2-2.2-5.3-5c0-2.8,2.4-5.2,5.2-5.2c2.7,0,5,2.2,5.1,5C1144.6,905.6,1142.4,907.9,1139.5,908z"/>
-                    <path fill="#FFFFFF" d="M1116.4,911.6c-7.9,0.1-14.3,6.5-14.2,14.4c0.1,7.7,6.4,14,14.2,14.1c7.9,0,14.3-6.3,14.3-14.2
+                        <path fill="#FFFFFF" d="M1116.4,911.6c-7.9,0.1-14.3,6.5-14.2,14.4c0.1,7.7,6.4,14,14.2,14.1c7.9,0,14.3-6.3,14.3-14.2
     				C1130.7,917.9,1124.3,911.5,1116.4,911.6z"/>
+                    </g>
                 </g>
             </g>
         </g>
-        <g id="PREGUNTA_CASTELLANO"></g>
+
         <g id="PREGUNTA_CAT">
             <path
                 opacity="0.4"
