post image on server and receives imagename

--- a/avatar-editor/app/views/sharemaleavatar.html
+++ b/avatar-editor/app/views/sharemaleavatar.html
@@ -8,13 +8,13 @@
     socialshare-provider="twitter"
     socialshare-text="This is my DistricteZero avatar!"
     socialshare-hashtags="districteZero"
-    socialshare-url="http://static.t13.cl/images/sizes/1200x675/mgr_630_brian_griffin.jpg"></a>
+    socialshare-url="{{shareavatar.imgurl}}"></a>
 
     <a id="shareFacebookLink"
     href=""
     socialshare
     socialshare-provider="facebook"
-    socialshare-url="http://static.t13.cl/images/sizes/1200x675/mgr_630_brian_griffin.jpg">
+    socialshare-url="{{shareavatar.imgurl}}">
     </a>
 
 
