--- a/avatar-editor/app/views/share.html
+++ b/avatar-editor/app/views/share.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html>
 <svg-to-jpeg style="display: none;" imgurl="share.imgUrl"></svg-to-jpeg>
-<share-avatar imgurl="share.imgUrl"></share-avatar>
+<share-avatar ng-if="share.imgUrl !== ''" imgurl="share.imgUrl"></share-avatar>
