--- a/avatar-editor/app/views/sharemaleavatar.html
+++ b/avatar-editor/app/views/sharemaleavatar.html
@@ -121,12 +121,12 @@
             <rect x="1360.9" y="348.7" fill="none" width="486.9" height="258"/>
             <text transform="matrix(1 0 0 1 1360.8805 392.0671)">
                 <tspan x="0" y="0" fill="#575756" font-family="'FuturaStd-Medium'" font-size="50">MÉS INFORMACIÓ</tspan>
-                <tspan x="0" y="208.8" fill="#575756" font-family="'FuturaStd-Bold'" font-size="41">DISTRICTEZERO.COM</tspan>
+                <tspan x="0" y="208.8" fill="#575756" font-family="'FuturaStd-Bold'" font-size="41" class="clickable" ng-click="shareavatar.go()">DISTRICTEZERO.COM</tspan>
             </text>
 
             <line fill="none" stroke="#878787" stroke-width="11" stroke-linecap="round" stroke-miterlimit="10" x1="1365.9" y1="420" x2="1507.9" y2="420"/>
         </g>
-        <image xlink:href="" ng-href="{{imgurl}}" x="600" y="200" height="400" width="400"/>
+        <image xlink:href="" ng-href="{{shareavatar.imgurl}}" x="600" y="200" height="400" width="400"/>
 
     </svg>
 
