all texts translated

--- a/avatar-editor/app/views/sharefemaleavatar.html
+++ b/avatar-editor/app/views/sharefemaleavatar.html
@@ -98,10 +98,10 @@
     			c7.5,0,13.6-6.1,13.6-13.6V450.5c0-7.1,6.6-12.4,13.6-10.9l49.7,11.1C669.4,453.2,677.3,440.4,670.2,431.6z"/>
                 <rect x="107.3" y="347.3" fill="none" width="486.9" height="258"/>
                 <text transform="matrix(1 0 0 1 107.2529 390.7213)">
-                    <tspan x="0" y="0" fill="#575756" font-family="'FuturaStd-Medium'" font-size="50">COMPÁRTEME !</tspan>
-                    <tspan x="0" y="157.2" fill="#575756" font-family="'FuturaStd-Bold'" font-size="41">EN LA RED
+                    <tspan x="0" y="0" fill="#575756" font-family="'FuturaStd-Medium'" font-size="50">{{ 'SHARE_P1' | translate }}</tspan>
+                    <tspan x="0" y="157.2" fill="#575756" font-family="'FuturaStd-Bold'" font-size="41">{{ 'SHARE_P2' | translate }}
                     </tspan>
-                    <tspan x="0" y="206.4" fill="#575756" font-family="'FuturaStd-Bold'" font-size="41">QUE PREFIERAS ...</tspan>
+                    <tspan x="0" y="206.4" fill="#575756" font-family="'FuturaStd-Bold'" font-size="41">{{ 'SHARE_P3' | translate }}</tspan>
                 </text>
 
                 <line fill="none" stroke="#878787" stroke-width="11" stroke-linecap="round" stroke-miterlimit="10" x1="112.3" y1="418.7" x2="254.2" y2="418.7"/>
@@ -123,7 +123,7 @@
     			V451.8c0-7.1-6.6-12.4-13.6-10.9l-49.7,11.1C1254.4,454.6,1246.4,441.7,1253.6,433z"/>
                 <rect x="1360.9" y="348.7" fill="none" width="486.9" height="258"/>
                 <text transform="matrix(1 0 0 1 1360.8804 392.0672)">
-                    <tspan x="0" y="0" fill="#575756" font-family="'FuturaStd-Medium'" font-size="50">MÁS INFORMACIÓN</tspan>
+                    <tspan x="0" y="0" fill="#575756" font-family="'FuturaStd-Medium'" font-size="50">{{ 'SHARE_P4' | translate }}</tspan>
                     <tspan x="0" y="208.8" fill="#575756" font-family="'FuturaStd-Bold'" font-size="41" class="clickable" ng-click="shareavatar.go()">DISTRICTEZERO.COM</tspan>
                 </text>
 
