--- a/avatar-editor/app/views/sharemaleavatar.html
+++ b/avatar-editor/app/views/sharemaleavatar.html
@@ -2,22 +2,9 @@
 
 <div style="width: 100%; height: 100%; display: flex; flex-direction: row; align-items: center; justify-content: center;">
 
-    <a id="shareTwitterLink"
-    href=""
-    socialshare
-    socialshare-provider="twitter"
-    socialshare-text="This is my DistricteZero avatar!"
-    socialshare-hashtags="districteZero"
-    socialshare-url="{{shareavatar.imgurl}}"></a>
+    <a id="shareTwitterLink" href="" socialshare socialshare-provider="twitter" socialshare-text="This is my DistricteZero avatar!" socialshare-hashtags="districteZero" socialshare-url="{{shareavatar.imgurl}}"></a>
 
-    <a id="shareFacebookLink"
-    href=""
-    socialshare
-    socialshare-provider="facebook"
-    socialshare-url="{{shareavatar.imgurl}}">
-    </a>
-
-
+    <a id="shareFacebookLink" href="" socialshare socialshare-provider="facebook" socialshare-url="{{shareavatar.imgurl}}"></a>
 
     <svg style="height: 99%; width: auto;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 1920.1 1081" enable-background="new 0 0 1920.1 1081" xml:space="preserve">
 
@@ -27,6 +14,9 @@
             <path opacity="0.6" fill="#E5E6E5" d="M1377.1,984.1l-320-984.8H871.6l-320,984.8c-2.4,3.7-3.7,7.7-3.7,11.6
     		c0,47.1,186.5,85.4,416.5,85.4s416.5-38.4,416.5-85.5C1380.8,991.7,1379.5,987.8,1377.1,984.1z"/>
         </g>
+
+        <image xlink:href="" ng-href="{{shareavatar.imgurl}}" x="650" y="165" height="625" width="625"/>
+
         <g id="MARCOS">
             <g>
                 <path fill="#FFFFFF" d="M1270,166v618H652V166H1270 M1270,155H652c-6.1,0-11,4.9-11,11v618c0,6.1,4.9,11,11,11h618
@@ -127,8 +117,6 @@
 
             <line fill="none" stroke="#878787" stroke-width="11" stroke-linecap="round" stroke-miterlimit="10" x1="1365.9" y1="420" x2="1507.9" y2="420"/>
         </g>
-        <image xlink:href="" ng-href="{{shareavatar.imgurl}}" x="600" y="200" height="400" width="400"/>
-
     </svg>
 
 </div>
