--- a/avatar-editor/app/views/sharemaleavatar.html
+++ b/avatar-editor/app/views/sharemaleavatar.html
@@ -2,9 +2,19 @@
 
 <div style="width: 100%; height: 100%; display: flex; flex-direction: row; align-items: center; justify-content: center;">
 
-    <a id="shareTwitterLink" href="" socialshare socialshare-provider="twitter" socialshare-text="This is my DistricteZero avatar!" socialshare-hashtags="districteZero" socialshare-url="{{shareavatar.imgurl}}"></a>
+    <a id="shareTwitterLink"
+    href=""
+    socialshare
+    socialshare-provider="twitter"
+    socialshare-text="This is my DistricteZero avatar!"
+    socialshare-hashtags="districteZero"
+    socialshare-url="{{shareavatar.imgurl}}"></a>
 
-    <a id="shareFacebookLink" href="" socialshare socialshare-provider="facebook" socialshare-url="{{shareavatar.imgurl}}"></a>
+    <a id="shareFacebookLink"
+    href=""
+    socialshare
+    socialshare-provider="facebook"
+    socialshare-url="{{shareavatar.imgurl}}"></a>
 
     <svg style="height: 99%; width: auto;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 1920.1 1081" enable-background="new 0 0 1920.1 1081" xml:space="preserve">
 
