some changes in backend stats

--- a/avatar-editor/app/views/admin.html
+++ b/avatar-editor/app/views/admin.html
@@ -3,4 +3,5 @@
 <div style="align:center; height: 60vh;">
     <admin-login ng-if="!admin.logged" logged="admin.logged"></admin-login>
     <div ng-if="admin.logged">perico</div>
+    <stats ng-if="admin.logged"></stats>
 </div>
