added some stats with pivot tables

--- a/avatar-editor/app/views/admin.html
+++ b/avatar-editor/app/views/admin.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
-<div style="align:center; height: 60vh;">
-    <admin-login ng-if="!admin.logged" logged="admin.logged"></admin-login>
-    <div ng-if="admin.logged">perico</div>
-    <stats ng-if="admin.logged"></stats>
+<div ng-if="!admin.logged" style="align:center; height: 60vh;">
+    <admin-login logged="admin.logged"></admin-login>
 </div>
+
+<stats ng-if="admin.logged"></stats>
